--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="grid grid-flow-col grid-cols-12 grid-rows-auto gap-2">
                     <div class="col-span-8">
                         <!-- type camping car -->
-                        <section class="flex flex-wrap content-center h-screen md:mx-12" v-show="mainContent === 'volet'">
+                        <section v-show="mainContent === 'volet'" class="flex flex-wrap content-center h-screen md:mx-12">
                             <type-campingcar :key="index" v-for="(tryptique, index) in apiAllTryptique"
                                 :img="tryptique.fields.images.image" :title="tryptique.fields.nom"
                                 v-on:add-volet="addVolet(tryptique.fields.nom)">
@@ -99,10 +99,50 @@
                             </div>
                         </section>
                         <!-- type dôme -->
-                        <section class="flex flex-wrap content-center h-screen md:mx-12" v-show="mainContent === 'domes'">
+                        <section v-show="mainContent === 'domes'" class="flex flex-wrap content-center h-screen md:mx-12">
                             <type-campingcar :key="index" v-for="(dome, index) in apiAllDome" :img="dome.fields.images.image"
                                 :title="dome.fields.nom" v-on:add-volet="addItem(dome)">
                             </type-campingcar>
+                        </section>
+                        <!-- FORM -->
+                        <section v-show="mainContent === 'form'" class="mx-8 max-w-4xl p-6 mx-auto bg-indigo-600 rounded-md shadow-md dark:bg-gray-800 mt-20">
+                            <h1 class="text-xl font-bold text-white dark:text-white">Veuillez renseigner les informations pour recevoir votre devis</h1>
+                            <form>
+                                <div class="grid grid-cols-1 gap-6 mt-4 sm:grid-cols-2">
+                                    <div>
+                                        <label class="text-white dark:text-gray-200" for="username">Nom</label>
+                                        <input id="username" type="text" class="block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring">
+                                    </div>
+                                    <div>
+                                        <label class="text-white dark:text-gray-200" for="username">Prénom</label>
+                                        <input id="userfirstname" type="text" class="block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring">
+                                    </div>
+
+                                    <div>
+                                        <label class="text-white dark:text-gray-200" for="emailAddress">Adresse e-mail</label>
+                                        <input id="emailAddress" type="email" class="block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring">
+                                    </div>
+                                    <div>
+                                        <label class="text-white dark:text-gray-200" for="emailAddress">Numéro de telephone</label>
+                                        <input id="phonenumber" type="number" class="block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring">
+                                    </div>
+
+                                    <div>
+                                        <label class="text-white dark:text-gray-200" for="password">Marque du camping car</label>
+                                        <input id="marque" type="text" class="block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring">
+                                    </div>
+
+                                    <div>
+                                        <label class="text-white dark:text-gray-200" for="passwordConfirmation">Indiquez votre demande</label>
+                                        <textarea id="textarea" type="textarea" class="block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring"></textarea>
+                                    </div>
+                                    
+                                </div>
+
+                                <div class="flex justify-end mt-6">
+                                    <button class="px-6 py-2 leading-5 text-white transition-colors duration-200 transform bg-pink-500 rounded-md hover:bg-pink-700 focus:outline-none focus:bg-gray-600">Recevoir votre devis</button>
+                                </div>
+                            </form>
                         </section>
                     </div>
                     <!-- panier -->
@@ -111,7 +151,7 @@
                             <div class="card-header mx-auto">
                                 <div class="card-header-title flex justify-between">
                                     <h1 class="font-bold">Votre panier</h1>
-                                    <button class="is-small button is-success is-outlined font-bold">Recapitulatif</button>
+                                    <button @click="mainContent = 'form'" class="is-small button is-success is-outlined font-bold">Recapitulatif</button>
                                 </div>
                             </div>
                             <!-- card-total-product 1 -->
