changement style cards

--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@
                                             <div class="w-full h-1/2 flex flex-col justify-center items-center">
                                                 <div class="text-gray-700 font-bold">
                                                     <div class="pb-3" v-for="(baie, index) in baies">
-                                                        Baie {{ index +1 }} = L{{ baie.height }}cm <span class="font-extrabold">X</span> H{{ baie.width
-                                                        }}cm
+                                                        Baie {{ index +1 }} = L: {{ baie.height }}cm <span class="font-extrabold">X</span> H: {{ baie.width
+                                                        }}cm -<span class="text-xs font-normal"> {{baie.totalPrice}}€ </span> 
                                                     </div>
                                                 </div>
                                             </div>
